crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__pattern_matching-3.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(r#\"\n            let bar = match (foo) {\n                n is number -> \"number\",\n                {a: a is Array} -> \"Array\",\n                _ -> \"fallthrough\"\n            };\n            \"#)"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 13..171,
                pattern: Ident(
                    BindingIdent {
                        span: 17..20,
                        id: Ident {
                            span: 17..20,
                            name: "bar",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Match(
                        Match {
                            span: 23..170,
                            expr: Ident(
                                Ident {
                                    span: 30..33,
                                    name: "foo",
                                },
                            ),
                            arms: [
                                Arm {
                                    span: 53..76,
                                    pattern: Is(
                                        IsPat {
                                            span: 53..64,
                                            id: Ident {
                                                span: 53..54,
                                                name: "n",
                                            },
                                            is_id: Ident {
                                                span: 58..64,
                                                name: "number",
                                            },
                                        },
                                    ),
                                    guard: None,
                                    expr: Lit(
                                        Str(
                                            Str {
                                                span: 68..76,
                                                value: "number",
                                            },
                                        ),
                                    ),
                                },
                                Arm {
                                    span: 94..120,
                                    pattern: Object(
                                        ObjectPat {
                                            span: 94..109,
                                            props: [
                                                KeyValue(
                                                    KeyValuePatProp {
                                                        key: Ident {
                                                            span: 95..96,
                                                            name: "a",
                                                        },
                                                        value: Is(
                                                            IsPat {
                                                                span: 98..108,
                                                                id: Ident {
                                                                    span: 98..99,
                                                                    name: "a",
                                                                },
                                                                is_id: Ident {
                                                                    span: 103..108,
                                                                    name: "Array",
                                                                },
                                                            },
                                                        ),
                                                    },
                                                ),
                                            ],
                                            optional: false,
                                        },
                                    ),
                                    guard: None,
                                    expr: Lit(
                                        Str(
                                            Str {
                                                span: 113..120,
                                                value: "Array",
                                            },
                                        ),
                                    ),
                                },
                                Arm {
                                    span: 138..156,
                                    pattern: Wildcard(
                                        WildcardPat {
                                            span: 138..139,
                                        },
                                    ),
                                    guard: None,
                                    expr: Lit(
                                        Str(
                                            Str {
                                                span: 143..156,
                                                value: "fallthrough",
                                            },
                                        ),
                                    ),
                                },
                            ],
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
